2010-10-07  Sergio Martin <sergio.martin@artica.es>

	* include/fgraph.php: Fixed crash when try to render 
	a graph without data

2010-10-07  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_agents.php: Removed the IP 
	address field from the agent massive edition

2010-10-06  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php: fixed the source code, now when you
	create a agent, the agent have not a any module.
	
	Fixes: #3077024

2010-10-06  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.php
	godmode/reporting/visual_console_builder.editor.js
	godmode/reporting/visual_console_builder.editor.php: Fixed the
	bad icon change in visual console editor when update an item
	for bug 3078016

2010-10-06  Miguel de Dios  <miguel.dedios@artica.es>

	* extras/pandoradb_migrate_v3.1_to_v3.2.sql: added default sound events in
	tconfig, fixed bug that found Raul. Thanks for the tips, Raul.
	
	Fixes: #3073370

2010-10-06  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_config.php: added in function "process_config" added
	lines code to check unset 'autoupdate' in $config.
	
	* operation/incidents/incident_statistics.php, godmode/users/user_list.php:
	cleaned source code style.

2010-10-06  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/status_monitor.php,
	operation/agentes/estado_ultimopaquete.php,
	operation/agentes/estado_monitores.php, godmode/agentes/module_manager.php:
	fixed the icon of policy in list of modules, now show when the module is
	unlinked. And cleaned source code style.
	
	Fixes: #3078716

2010-10-06  Sergio Martin <sergio.martin@artica.es>

	* include/fgraph.php
	operation/incidents/incident_statistics.php: Fixed the incident
	statistics for bug 3078118

2010-10-06 Dario Rodriguez <dario.rodriguez@artica.es>

	*operation/agentes/estado_agente.php, ver_agente.php: Fixed some problems 
	processing the input
